------------------------------------------------------------------------------
Version 8.1907.0 (aka 2019.07) 2019-07-09
- omamqp1: port to latest api, add tests
  This brings omamqp1 up-to-date with the latest qpid-proton-c
  api version.  This also adds a test for the plugin, to test
  the basic functionality.  The test requires the user to
  install qdrouterd and the python qpid-proton library in order
  to use the simple_recv.py test program.
  Thanks to Richard Megginson for the patch.
- omclickhouse bugfix: potential segfault on omclickhouse batchmode
  segfault happened when the template did not containt the string
  "VALUES".
  Thanks to github user wdjwxh for the fix.
- core bugfix: message duplication copied incorrect timestamp
  MsgDup() placed timereported into timegenerated property, resulting
  in invalid property values. Orignal timegenerated was lost. This
  occured always when a message needed to be duplicated. Most
  importantly this is the case when queues are used.
  closes https://github.com/rsyslog/rsyslog/issues/3716
- core bugfix: segfault on startup depending on queue file names
  rsyslog will segfault on startup when a main queue file name has
  been set and at least on other queue contains a file name. This
  was cased by too-early freeing config error-detection data
  structures. It is a regression caused by commit e22fb205a3.
  Thanks to Wade Simmons for reporting this issue and providing
  detailled analysis. That greatly helps fixing it quickly.
  closes https://github.com/rsyslog/rsyslog/issues/3681
- core "bugfix": alignment issue
  This was not a hard error on current platforms, but a
  to-be-considered compiler warning regarding invalid alignment.
  While it works well on current platforms, alignment issues may
  turn into real issues in future platforms. So we try to fix them
  if possible. As not only a side-effect this resolves compiler
  warnings even on current platforms.